# project-agi

./: .gitignore  ADMIN_CONSOLE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSOLE_REQUIREMENTS.html  CONTRIBUTING.md  DEBATE.md  DEFERRED_QUESTIONS.md  DESIGN.html  EXECUTION_PLAN.html  LICENSE  ORCHESTRATOR_RESEARCH.html  ORCHESTRATOR_RESEARCH.md  PLAN.html  PROPOSAL.md  README.md  RESOLVED_STACK.md  SECURITY.md  conftest.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflow-templates/: pack-hotfix.properties.json  pack-hotfix.yml
.github/workflows/: ci.yml  helm-kind.yml  publish-images.yml  publish-pypi.yml  validate-packs.yml
.smoke/: operator.yaml  sdk_deflect_smoke.py  sdk_ollama_smoke.py
deploy/docker/: .env.example  README.md  docker-compose.yml  otel-collector-config.yaml
distribution/agi-auth/: README.md  pyproject.toml
distribution/agi-auth/agi_auth/: __init__.py  adapter.py  dev_noop.py  keycloak.py  middleware.py  static_token.py
distribution/agi-auth/tests/: test_dev_noop_refuses_prod.py
distribution/agi-chart/: .helmignore  Chart.yaml  values.schema.json  values.yaml
distribution/agi-chart/templates/: NOTES.txt  _helpers.tpl  configmap-otel.yaml  configmap-packs.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount-secret.yaml  serviceaccount.yaml
distribution/agi-chart/templates/tests/: test-chat-roundtrip.yaml  test-runtime-readiness.yaml
distribution/agi-runtime/: Dockerfile  README.md  pyproject.toml
distribution/agi-runtime/agi_runtime/: __init__.py  config.py  main.py  packs.py  state.py  tool_bundles.py
distribution/agi-runtime/agi_runtime/middleware/: __init__.py  dispatch.py
distribution/agi-runtime/agi_runtime/routes/: __init__.py  admin.py  chat.py  health.py  kb.py  tools.py  trail.py
distribution/agi-runtime/tests/: conftest.py  test_admin_endpoints.py  test_chat_delegates_to_seam.py  test_chat_end_to_end.py  test_config_precedence.py  test_dispatch.py  test_health.py  test_pack_reload.py  test_tools_catalogue.py  test_trail_filter.py
distribution/agi-ui/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth.ts  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
distribution/agi-ui/app/: globals.css  layout.tsx  page.tsx
distribution/agi-ui/app/__tests__/: audit-filters.test.ts  audit-page.test.tsx  form-from-schema.test.tsx  health-page.test.tsx  pack-overview-reload.test.tsx  pack-switcher.test.tsx  runtime-fetch.test.ts  sidebar.test.tsx  tool-catalogue.test.tsx  use-cases-page.test.tsx
distribution/agi-ui/app/audit/: csv-export.tsx  filters-form.tsx  filters.ts  page.tsx
distribution/agi-ui/app/components/: app-shell.tsx  audit-list.tsx  auth-provider.tsx  charts.tsx  form-from-schema.tsx  pack-switcher.tsx  runtime-fetch.ts  sidebar.tsx  tools-table.tsx  topbar.tsx
distribution/agi-ui/app/e2e/: smoke.spec.ts
distribution/agi-ui/app/jobs/: page.tsx
distribution/agi-ui/app/lib/: auth-augment.d.ts  auth-types.ts  health-helpers.ts  server-session.ts
distribution/agi-ui/app/llm/: page.tsx
distribution/agi-ui/lib/: utils.ts
distribution/agi-ui/scripts/: check-no-hex.ts
docs/: architecture.md  concepts.md
docs/decisions/: ADR-0001-deflect-retrofit-findings.md  ADR-0002-serve-vs-runtime-dispatch.md  ADR-0003-runtime-stub-use-cases.md
docs/deploy/: getting-started.md  helm.md  hotfix.md  p5-runbook.md
docs/packs/: authoring.md  migration.md
docs/tools/: authoring.md
docs/use-cases/: authoring.md
packs/care-demo/: README.md  pack.yaml  tools.yaml
packs/care-demo/kb/: account-activation.md  bill-explanation.md  plan-change.md  refund-policy.md  tier-2-escalation.md
packs/care-demo/prompts/: deflect.j2  resolve.j2  system.j2
packs/care-demo/scenarios/: deflect.scenario.json  escalate.scenario.json  resolve.scenario.json
packs/fleet-demo/: README.md  pack.yaml  tools.yaml
packs/fleet-demo/kb/: delivery-exception-codes.md  driver-handoff.md  eta-recompute-policy.md  proof-of-delivery.md  route-incident-handling.md
packs/fleet-demo/prompts/: deflect.j2  escalate.j2  resolve.j2  system.j2
packs/fleet-demo/scenarios/: deflect.scenario.json  escalate.scenario.json  resolve.scenario.json
packs/telco-demo/: README.md  pack.yaml  tools.yaml
packs/telco-demo/kb/: bill-explanation.md  esim-activation.md  plan-change.md  refund-policy.md  tier-2-escalation.md
packs/telco-demo/prompts/: escalate.j2  system.j2
packs/telco-demo/scenarios/: deflect.scenario.json  escalate.scenario.json  resolve.scenario.json
(+55 files in other folders)
