[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agi-auth"
version = "0.3.0-dev"
description = "project-agi auth adapters — Keycloak reference + generic OIDC + dev modes"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "project-agi contributors" },
]
keywords = ["agi", "auth", "oidc", "keycloak", "jwt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "authlib>=1.3",
    "httpx",
    "pydantic>=2",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["agi_auth"]

[tool.hatch.build.targets.sdist]
include = [
    "agi_auth/",
    "tests/",
    "README.md",
    "pyproject.toml",
]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
